Se incluyen funciones

--- a/day7/index.html
+++ b/day7/index.html
@@ -9,6 +9,20 @@
     <!--Día 7-->
 </head>
 <body>
-    
+    <div id="display">
+        <input type="number">
+    </div>
+    <div class="calculadora">
+        <button class="number" id="cero" onclick="imprimircero();">0</button>
+        <button class="number" onclick="imprimirNumero('uno');" id="uno">1</button>
+        <button class="number" onclick="imprimirNumero('dos');" id="dos">2</button>
+        <button class="number" onclick="imprimirNumero();">3</button>
+        <button class="number" onclick="imprimirNumero();">4</button>
+        <button class="number" onclick="imprimirNumero();">5</button>
+        <button class="number" onclick="imprimirNumero();">6</button>
+        <button class="number" onclick="imprimirNumero();">7</button>
+        <button class="number" onclick="imprimirNumero();">8</button>
+        <button class="number" onclick="imprimirNumero();">9</button>
+    </div>
 </body>
 </html>
