Se actualizan funciones

--- a/day7/index.html
+++ b/day7/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,16 +13,16 @@
         <input type="number">
     </div>
     <div class="calculadora">
-        <button class="number" id="cero" onclick="imprimircero();">0</button>
+        <button class="number" onclick="imprimirNumero('cero');" id="cero">0</button>
         <button class="number" onclick="imprimirNumero('uno');" id="uno">1</button>
         <button class="number" onclick="imprimirNumero('dos');" id="dos">2</button>
-        <button class="number" onclick="imprimirNumero();">3</button>
-        <button class="number" onclick="imprimirNumero();">4</button>
-        <button class="number" onclick="imprimirNumero();">5</button>
-        <button class="number" onclick="imprimirNumero();">6</button>
-        <button class="number" onclick="imprimirNumero();">7</button>
-        <button class="number" onclick="imprimirNumero();">8</button>
-        <button class="number" onclick="imprimirNumero();">9</button>
+        <button class="number" onclick="imprimirNumero('tres');" id="tres">3</button>
+        <button class="number" onclick="imprimirNumero('cuatro');" id="cuatro">4</button>
+        <button class="number" onclick="imprimirNumero('cinco');" id="cinco">5</button>
+        <button class="number" onclick="imprimirNumero('seis');" id="seis">6</button>
+        <button class="number" onclick="imprimirNumero('siete');" id="siete">7</button>
+        <button class="number" onclick="imprimirNumero('ocho');" id="ocho">8</button>
+        <button class="number" onclick="imprimirNumero('nueve');" id="nueve">9</button>
     </div>
 </body>
 </html>
