Se agregan funciones

--- a/day7/index.html
+++ b/day7/index.html
@@ -23,6 +23,12 @@
         <button class="number" onclick="imprimirNumero('siete');" id="siete">7</button>
         <button class="number" onclick="imprimirNumero('ocho');" id="ocho">8</button>
         <button class="number" onclick="imprimirNumero('nueve');" id="nueve">9</button>
+        <button class="number" onclick="imprimirNumero('decimal');" id="decimal">.</button>
+        <button class="aritmetica" onclick="calcular('suma')" id="suma">+</button>
+        <button class="aritmetica" onclick="calcular('resta')" id="resta">-</button>
+        <button class="aritmetica" onclick="calcular('multiplicacion')" id="multiplicacion">*</button>
+        <button class="aritmetica" onclick="calcular('division')" id="division">/</button>
+        <button class="aritmetica" onclick="igual();" id="igualdad">=</button>
     </div>
 </body>
 </html>
