Se añade función de reinicio

--- a/day7/index.html
+++ b/day7/index.html
@@ -29,6 +29,7 @@
         <button class="aritmetica" onclick="calcular('multiplicacion')" id="multiplicacion">*</button>
         <button class="aritmetica" onclick="calcular('division')" id="division">/</button>
         <button class="aritmetica" onclick="igual();" id="igualdad">=</button>
+        <button class="aritmetica" onclick="reinicio();"id="reinicio">AC</button>
     </div>
 </body>
 </html>
