--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <!--Principal-->
 </head>
 <body>
-    <a href="./day7/index.html">día 7</a>
+    <a href="./dia7.html">día 7</a>
 </body>
 </html>
