--- a/dia7.html
+++ b/dia7.html
@@ -8,28 +8,39 @@
     <title>Día 7</title>
 </head>
 <body>
-    <div id="display">
-        <p id="pantalla"></p>
-    </div>
-    <div class="calculadora">
-        <button class="number" onclick="imprimirNumero('cero');" id="cero">0</button>
-        <button class="number" onclick="imprimirNumero('uno');" id="uno">1</button>
-        <button class="number" onclick="imprimirNumero('dos');" id="dos">2</button>
-        <button class="number" onclick="imprimirNumero('tres');" id="tres">3</button>
-        <button class="number" onclick="imprimirNumero('cuatro');" id="cuatro">4</button>
-        <button class="number" onclick="imprimirNumero('cinco');" id="cinco">5</button>
-        <button class="number" onclick="imprimirNumero('seis');" id="seis">6</button>
-        <button class="number" onclick="imprimirNumero('siete');" id="siete">7</button>
-        <button class="number" onclick="imprimirNumero('ocho');" id="ocho">8</button>
-        <button class="number" onclick="imprimirNumero('nueve');" id="nueve">9</button>
-        <button class="number" onclick="imprimirNumero('decimal');" id="decimal">.</button>
-        <button class="aritmetica" onclick="calcular('suma')" id="suma">+</button>
-        <button class="aritmetica" onclick="calcular('resta')" id="resta">-</button>
-        <button class="aritmetica" onclick="calcular('multiplicacion')" id="multiplicacion">*</button>
-        <button class="aritmetica" onclick="calcular('division')" id="division">/</button>
-        <button class="aritmetica" onclick="igual();" id="igualdad">=</button>
-        <button class="aritmetica" onclick="reinicio();"id="reinicio">AC</button>
-    </div>
-    <a href="./index.html">Volver</a>
+    <main class="principal">
+        <section class="calculadora">
+            <div id="display">
+                <p id="pantalla"></p>
+            </div>
+            <div class="calculadora">
+                <button class="number" onclick="imprimirNumero('cero');" id="cero">0</button>
+                <button class="number" onclick="imprimirNumero('uno');" id="uno">1</button>
+                <button class="number" onclick="imprimirNumero('dos');" id="dos">2</button>
+                <button class="number" onclick="imprimirNumero('tres');" id="tres">3</button>
+                <button class="number" onclick="imprimirNumero('cuatro');" id="cuatro">4</button>
+                <button class="number" onclick="imprimirNumero('cinco');" id="cinco">5</button>
+                <button class="number" onclick="imprimirNumero('seis');" id="seis">6</button>
+                <button class="number" onclick="imprimirNumero('siete');" id="siete">7</button>
+                <button class="number" onclick="imprimirNumero('ocho');" id="ocho">8</button>
+                <button class="number" onclick="imprimirNumero('nueve');" id="nueve">9</button>
+                <button class="number" onclick="imprimirNumero('decimal');" id="decimal">.</button>
+                <button class="aritmetica" onclick="calcular('suma')" id="suma">+</button>
+                <button class="aritmetica" onclick="calcular('resta')" id="resta">-</button>
+                <button class="aritmetica" onclick="calcular('multiplicacion')" id="multiplicacion">*</button>
+                <button class="aritmetica" onclick="calcular('division')" id="division">/</button>
+                <button class="aritmetica" onclick="igual();" id="igualdad">=</button>
+                <button class="aritmetica" onclick="reinicio();"id="reinicio">AC</button>
+            </div>
+            <a href="./index.html">Volver</a>
+        </section>
+        <section class="descripción">
+            
+        </section>
+
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
