--- a/dia1.html
+++ b/dia1.html
@@ -32,11 +32,16 @@
                 <button class="numbers__lista__boton" onclick="asignarVariable(30);">30</button>
             </li>
         </ul>
+        <p id="botones__var_uno"></p>
+        <p id="botones__var_dos"></p>
     </section>
     <section class="comparar">
         <div class="comparar__seccion">
             <h2 class="comparar__seccion__encabezado">Compara si su valor y su tipo coinciden</h2>
             <button id="comparar__seccion__Valor" onclick="comparaValor();" disabled>Inténtalo</button>
+        </div>
+        <div class="comparar_seccion">
+            <p id="comparar__seccion_resultado"></p>
         </div>
     </section>
     <a href="./index.html">Volver</a>
