Se agrega función de día 2

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <!--Principal-->
 </head>
 <body>
-    <a href="./dia1.html">día 1</a>
-    <a href="./dia7.html">día 7</a>
+    <a href="./dia1.html">Día 1</a>
+    <a href="./dia2.html">Día 2</a>
+    <a href="./dia7.html">Día 7</a>
 </body>
 </html>
