--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <a href="./dia1.html">Día 1</a>
     <a href="./dia2.html">Día 2</a>
+    <a href="./dia3.html">Día 3</a>
     <a href="./dia7.html">Día 7</a>
 </body>
 </html>
