--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <a href="./dia1.html">Día 1</a>
     <a href="./dia2.html">Día 2</a>
     <a href="./dia3.html">Día 3</a>
+    <a href="./dia4.html">Día 4</a>
     <a href="./dia7.html">Día 7</a>
 </body>
 </html>
