--- a/dia4.html
+++ b/dia4.html
@@ -14,8 +14,8 @@
             <p class="resultado__parrafo"></p>
         </div>
         <div class="eleccionJuego">
-            <button class="eleccion_juego"></button>
-            <button class="eleccion_juego"></button>
+            <button class="eleccion_juego" onclick="iniciarJuego();">inténtalo con un ciclo For!</button>
+            <button class="eleccion_juego">inténtalo con un ciclo while!</button>
         </div>
         <div class="juego">
             <div class="juego__dialogo__forma">
@@ -46,6 +46,7 @@
                 <button type="button" class="reiniciar__button hidden" id="boton__reinicio" onclick="reinicio();">¡Quiero volver a jugar!</button>
             </div>
         </div>
+        <a href="./index.html">Volver</a>
     </main>
 </body>
 </html>
