Se agregan días 5 y 6

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <a href="./dia2.html">Día 2</a>
     <a href="./dia3.html">Día 3</a>
     <a href="./dia4.html">Día 4</a>
+    <a href="./dia5y6.html"> Días 5 y 6</a>
     <a href="./dia7.html">Día 7</a>
 </body>
 </html>
