Se agregan elementos

--- a/dia5y6.html
+++ b/dia5y6.html
@@ -11,6 +11,13 @@
         <div class="iniciar">
             <button type="button" class="iniciar__boton" onclick="cuadroDeDialogo();">¡Vamos a intentarlo!</button>
         </div>
+        <div class="eliminar">
+            <form action="" id="eliminar__forma">
+                <label for="eliminar__forma__boton" id="eliminar__forma__label">¿Deseas eliminar un alimento?</label>
+                <button type="button" class="eliminar__forma__boton" value="Sí">Sí</button>
+                <button type="button" class="eliminar__forma__boton" value="No">No</button>
+            </form>
+        </div>
         <dialog id="ingreso">
             <form action="" class="ingreso__forma">
                 <label for="" class="ingreso__forma__label">¿Deseas agregar un alimento a tu lista de compras?</label>
