--- a/dia5y6.html
+++ b/dia5y6.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="./day5y6/day5_y_6.js"></script>
+    <link rel="stylesheet" href="./day5y6/day5_y_6.css">
     <title>Document</title>
 </head>
 <body>
@@ -12,10 +13,21 @@
             <button type="button" class="iniciar__boton" onclick="cuadroDeDialogo();">¡Vamos a intentarlo!</button>
         </div>
         <div class="eliminar">
-            <form action="" id="eliminar__forma">
+            <form action="" id="eliminar__forma" class="eliminar_forma hidden">
                 <label for="eliminar__forma__boton" id="eliminar__forma__label">¿Deseas eliminar un alimento?</label>
                 <button type="button" class="eliminar__forma__boton" value="Sí">Sí</button>
                 <button type="button" class="eliminar__forma__boton" value="No">No</button>
+            </form>
+            <form action="" class="eliminar__categoria hidden" id="eliminar_categoria">
+                <label for="" class="eliminar__categoria__label">Selecciona la clasificación del alimento</label>
+                <select name="" id="forma_categoria" class="eliminar__categoria__seleccion">
+                    <option value="" class="eliminar__categoria__select__option"></option>
+                    <option value="frutas" class="eliminar__categoria__select__option">Frutas</option>
+                    <option value="lacteos" class="eliminar__categoria__select__option">Lácteos</option>
+                    <option value="congelados" class="eliminar__categoria__select__option">Congelados</option>
+                    <option value="dulces" class="eliminar__categoria__select__option">Dulces</option>
+                </select>
+                <button type="button" class="eliminar__categoria__select__button" onclick="categoriaElimina();">Seleccionar</button>
             </form>
         </div>
         <dialog id="ingreso">
@@ -59,35 +71,46 @@
             <div class="resultados__categorias" id="resultados__frutas">
                 <h2 class="resultados__categorias_titulo" id="titulo_frutas"></h2>
                 <ul class="resultados__categorias__lista" id="listado_frutas"></ul>
-                <form action="" class="resultados__categorias__forma">
+                <form action="" class="resultados__categorias__forma hidden" id="eliminar_fruta">
+                    <label for="Lista_frutas" class="resultados__categorias__forma__label">¿Qué alimento quieres eliminar?</label>
                     <select name="Lista_frutas" id="Lista_frutas">
                         <option value=""></option>
                     </select>
+                    <button type="button" class="resultados__categorias__forma__boton" onclick="frutaElegida();">Elminar</button>
                 </form>
             </div>
             <div class="resultados__categorias" id="resultados__lacteos">
                 <h2 class="resultados__categorias_titulo" id="titulo_lacteos"></h2>
                 <ul class="resultados__categorias__lista" id="listado_lacteos"></ul>
-                <form action="" class="resultados__categorias__forma">
+                <form action="" class="resultados__categorias__forma hidden" id="eliminar_lacteo">
+                    <label for="Lista_lacteos" class="resultados__categorias__forma__label">¿Qué alimento quieres eliminar?</label>
                     <select name="Lista_lacteos" id="Lista_lacteos">
                         <option value=""></option>
                     </select>
+                    <button type="button" class="resultados__categorias__forma__boton" onclick="lacteoElegido();">Elminar</button>
+                </form>
             </div>
             <div class="resultados__categorias" id="resultados__congelados">
                 <h2 class="resultados__categorias_titulo" id="titulo_congelados"></h2>
                 <ul class="resultados__categorias__lista" id="listado_congelados"></ul>
-                <form action="" class="resultados__categorias__forma">
+                <form action="" class="resultados__categorias__forma hidden" id="eliminar_congelado">
+                    <label for="Lista_congelados" class="resultados__categorias__forma__label">¿Qué alimento quieres eliminar?</label>
                     <select name="Lista_congelados" id="Lista_congelados">
                         <option value=""></option>
                     </select>
+                    <button type="button" class="resultados__categorias__forma__boton" onclick="congeladoElegido()">Elminar</button>
+                </form>
             </div>
             <div class="resultados__categorias" id="resultados__dulces">
                 <h2 class="resultados__categorias_titulo" id="titulo_dulces"></h2>
                 <ul class="resultados__categorias__lista" id="listado_dulces"></ul>
-                <form action="" class="resultados__categorias__forma">
+                <form action="" class="resultados__categorias__forma hidden" id="eliminar_dulce">
+                    <label for="Lista_dulces" class="resultados__categorias__forma__label">¿Qué alimento quieres eliminar?</label>
                     <select name="Lista_dulces" id="Lista_dulces">
                         <option value=""></option>
                     </select>
+                    <button type="button" class="resultados__categorias__forma__boton" onclick="dulceElegido();">Elminar</button>
+                </form>
             </div>
         </div>
     </main>
