Se agregan íconos

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!--pa linkear la hoja de estilos externa csslink:css-->
     <script src="./script.js"></script>
     <title>/ days of coding</title>
     <!--Principal-->
@@ -15,5 +17,7 @@
     <a href="./dia4.html">Día 4</a>
     <a href="./dia5y6.html"> Días 5 y 6</a>
     <a href="./dia7.html">Día 7</a>
+    <a href="https://www.linkedin.com/in/miguelims"><i class="fa-brands fa-linkedin"></i></a>
+    <a href="https://github.com/MiguelFigueroa02"><i class="fa-brands fa-github"></i></a>
 </body>
 </html>
