Se agregan muestras

--- a/dia1.html
+++ b/dia1.html
@@ -7,43 +7,53 @@
     <title>Día 1</title>
 </head>
 <body>
-    <section class="botones">
-        <h2 class="botones__titulo">Variables tipo String</h2>
-        <ul class="strings">
-            <li class="strings__lista">
-                <button class="string__lista__boton" onclick="asignarVariable('1');">'1'</button>
-            </li>
-            <li class="strings__lista">
-                <button class="string__lista__boton" onclick="asignarVariable('10');">'10'</button>
-            </li>
-            <li class="strings__lista">
-                <button class="string__lista__boton" onclick="asignarVariable('30');">'30'</button>
-            </li>
-        </ul>
-        <h2 class="botones__titulo">Variables tipo Number</h2>
-        <ul class="numbers">
-            <li class="numbers__lista">
-                <button class="numbers__lista__boton" onclick="asignarVariable(1);">1</button>
-            </li>
-            <li class="numbers__lista">
-                <button class="numbers__lista__boton" onclick="asignarVariable(10);">10</button>
-            </li>
-            <li class="numbers__lista">
-                <button class="numbers__lista__boton" onclick="asignarVariable(30);">30</button>
-            </li>
-        </ul>
-        <p id="botones__var_uno"></p>
-        <p id="botones__var_dos"></p>
-    </section>
-    <section class="comparar">
-        <div class="comparar__seccion">
-            <h2 class="comparar__seccion__encabezado">Compara si su valor y su tipo coinciden</h2>
-            <button id="comparar__seccion__Valor" onclick="comparaValor();" disabled>Inténtalo</button>
-        </div>
-        <div class="comparar_seccion">
-            <p id="comparar__seccion_resultado"></p>
-        </div>
-    </section>
-    <a href="./index.html">Volver</a>
+    <header>
+        <nav class="navegacion">
+            <div class="navegacion__enlaces">
+                <a href="./index.html">Inicio</a>
+            </div>
+
+        </nav>
+    </header>
+    <main>
+        <section class="botones">
+            <h2 class="botones__titulo">Variables tipo String</h2>
+            <ul class="strings">
+                <li class="strings__lista">
+                    <button class="string__lista__boton" onclick="asignarVariable('1');">'1'</button>
+                </li>
+                <li class="strings__lista">
+                    <button class="string__lista__boton" onclick="asignarVariable('10');">'10'</button>
+                </li>
+                <li class="strings__lista">
+                    <button class="string__lista__boton" onclick="asignarVariable('30');">'30'</button>
+                </li>
+            </ul>
+            <h2 class="botones__titulo">Variables tipo Number</h2>
+            <ul class="numbers">
+                <li class="numbers__lista">
+                    <button class="numbers__lista__boton" onclick="asignarVariable(1);">1</button>
+                </li>
+                <li class="numbers__lista">
+                    <button class="numbers__lista__boton" onclick="asignarVariable(10);">10</button>
+                </li>
+                <li class="numbers__lista">
+                    <button class="numbers__lista__boton" onclick="asignarVariable(30);">30</button>
+                </li>
+            </ul>
+            <p id="botones__var_uno"></p>
+            <p id="botones__var_dos"></p>
+        </section>
+        <section class="comparar">
+            <div class="comparar__seccion">
+                <h2 class="comparar__seccion__encabezado">Compara si su valor y su tipo coinciden</h2>
+                <button id="comparar__seccion__Valor" onclick="comparaValor();" disabled>Inténtalo</button>
+            </div>
+            <div class="comparar_seccion">
+                <p id="comparar__seccion_resultado"></p>
+            </div>
+        </section>
+    </main>
+
 </body>
 </html>
