--- a/index.html
+++ b/index.html
@@ -7,17 +7,37 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!--pa linkear la hoja de estilos externa csslink:css-->
     <script src="./script.js"></script>
-    <title>/ days of coding</title>
+    <title>7 days of coding</title>
     <!--Principal-->
 </head>
 <body>
-    <a href="./dia1.html">Día 1</a>
-    <a href="./dia2.html">Día 2</a>
-    <a href="./dia3.html">Día 3</a>
-    <a href="./dia4.html">Día 4</a>
-    <a href="./dia5y6.html"> Días 5 y 6</a>
-    <a href="./dia7.html">Día 7</a>
-    <a href="https://www.linkedin.com/in/miguelims"><i class="fa-brands fa-linkedin"></i></a>
-    <a href="https://github.com/MiguelFigueroa02"><i class="fa-brands fa-github"></i></a>
+    <main>
+        <div class="proyecto">
+            <h1 class="proyecto__titulo"><span id="proyecto__titulo__siete">7</span> days of <br> coding</h1>
+            <h2 class="proyecto__subtitulo"> ¡Bienvenido a la página de mi proyecto 🚀💡!</h2>
+            <p class="proyecto__descripcion">
+                Durante una semana, trabajé en una serie de desafíos diseñados para fortalecer mis habilidades en <span>JavaScript</span>. A lo largo del proyecto, exploré desde estructuras de control de flujo hasta manipulación de datos y funciones, aplicando conceptos clave para resolver problemas de manera eficiente. Este desafío no solo me permitió mejorar mi lógica de programación, sino también ganar confianza al enfrentar nuevos retos en el desarrollo web. 
+            </p>
+            <p class="proyecto__descripcion">
+                Te invito a conocer el resultado de cada uno de los ejercicios a continuación💻:
+            </p>
+        </div>
+        <div class="dias">
+            <a href="./dia1.html" class="dias__enlace">Día 1</a>
+            <a href="./dia2.html" class="dias__enlace">Día 2</a>
+            <a href="./dia3.html" class="dias__enlace">Día 3</a>
+            <a href="./dia4.html" class="dias__enlace">Día 4</a>
+            <a href="./dia5y6.html" class="dias__enlace"> Días 5 y 6</a>
+            <a href="./dia7.html" class="dias__enlace">Día 7</a>
+        </div>
+        <section class="redes">
+            <p class="redes__descripcion">Gracias por visitar mi proyecto. 🌐 Si te gustaría estar más conectado, no dudes en seguirme en mis redes sociales. ¡Conectemos y compartamos juntos nuestras experiencias! 🤝</p>
+            <div class="redes__botones">
+                <a href="https://www.linkedin.com/in/miguelims" class="redes__enlace">LinkedIn <i class="fa-brands fa-linkedin"></i></a>
+                <a href="https://github.com/MiguelFigueroa02" class="redes__enlace">GitHub <i class="fa-brands fa-github"></i></a>
+            </div>
+        </section>
+    </main>
+    
 </body>
 </html>
