--- a/dia2.html
+++ b/dia2.html
@@ -8,6 +8,11 @@
     <title>Día 2</title>
 </head>
 <body>
+    <header>
+        <nav class="navegacion">
+            <a href="./index.html">Inicio</a>
+        </nav>
+    </header>
     <main>
         <section class="cuestionario">
             <label class="cuestionario__pregunta">¿Cuál es tu nombre?</label>
@@ -31,7 +36,7 @@
         </section>
     </main>
     <footer>
-        <a href="./index.html">Volver</a>
+        
     </footer>
 </body>
 </html>
