Se agrega día 1

--- a/about.html
+++ b/about.html
@@ -3,25 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="./about.css">
     <title>Acerca de mí</title>
 </head>
 <body>
     <header>
-        <h1>¡Hola! Soy Miguel Figueroa 👋</h1>
-        <p>Un entusiasta y aprendiz de Programación</p>
+        <nav>
+            <a href="./index.html">Inicio</a>
+        </nav>
     </header>
 
     <section>
         <h2>Acerca de mí</h2>
         <p>Mi nombre es <strong>Miguel Figueroa</strong> 🧑‍💻. Soy originario de <strong>México</strong> 🇲🇽 y tengo <strong>33 años</strong>. Me encanta aprender nuevas tecnologías y compartir mis conocimientos con la comunidad.</p>
-
         <p>Actualmente, soy parte del programa <strong>ONE de Alura Latam</strong> 🚀, un programa increíble que me ha permitido desarrollar mis habilidades de programación. Estoy muy contento de poder mostrar los resultados de lo que he aprendido y continuar creciendo en el mundo del desarrollo web 🌐.</p>
-
-        <h2>Mis Hobbies 🐾⚽</h2>
         <p>Fuera de la programación, soy una persona sencilla y me gusta disfrutar de las cosas simples de la vida. Soy fan de los <strong>Simpsons</strong> 🍩. También me encanta ver <strong>fútbol</strong> ⚽. Y por supuesto, no podría dejar de mencionar a mis <strong>tres perritos</strong> 🐶🐶🐶, que son parte fundamental de mi vida. Ellos siempre me alegran el día.</p>
 
-        <h2>¡Hablemos! 💬</h2>
+        <h3>¡Hablemos! 💬</h3>
         <p>Si tienes alguna duda sobre mis proyectos o si te gustaría que colaboráramos en algo, no dudes en contactarme a través de mis redes sociales. ¡Me encantaría conectar contigo! 🌟</p>
+        <div class="redes__botones">
+            <a href="https://www.linkedin.com/in/miguelims" class="redes__enlace">LinkedIn <i class="fa-brands fa-linkedin"></i></a>
+            <a href="https://github.com/MiguelFigueroa02" class="redes__enlace">GitHub <i class="fa-brands fa-github"></i></a>
+        </div>
     </section>
 
     <footer>
