--- a/dia4.html
+++ b/dia4.html
@@ -14,6 +14,7 @@
             <p class="resultado__parrafo"></p>
         </div>
         <div class="eleccionJuego hidden" id="contenedorBotonesJuego">
+            <h2 class="eleccionJuego__titulo">¡Adivina el número secreto!</h2>
             <button class="eleccion_juego" onclick="iniciarJuego();">inténtalo con un ciclo For!</button>
             <button class="eleccion_juego" onclick="cicloWhile();">inténtalo con un ciclo while!</button>
         </div>
