Se añade diseño responsivo sobre index html

--- a/about.html
+++ b/about.html
@@ -8,25 +8,27 @@
     <title>Acerca de mí</title>
 </head>
 <body>
-    <header>
-        <nav>
-            <a href="./index.html">Inicio</a>
+    <header class="header">
+        <nav class="header__menu">
+            <a href="./index.html" class="header__menu__link">Inicio</a>
         </nav>
     </header>
-
-    <section>
-        <h2>Acerca de mí</h2>
-        <p>Mi nombre es <strong>Miguel Figueroa</strong> 🧑‍💻. Soy originario de <strong>México</strong> 🇲🇽 y tengo <strong>33 años</strong>. Me encanta aprender nuevas tecnologías y compartir mis conocimientos con la comunidad.</p>
-        <p>Actualmente, soy parte del programa <strong>ONE de Alura Latam</strong> 🚀, un programa increíble que me ha permitido desarrollar mis habilidades de programación. Estoy muy contento de poder mostrar los resultados de lo que he aprendido y continuar creciendo en el mundo del desarrollo web 🌐.</p>
-        <p>Fuera de la programación, soy una persona sencilla y me gusta disfrutar de las cosas simples de la vida. Soy fan de los <strong>Simpsons</strong> 🍩. También me encanta ver <strong>fútbol</strong> ⚽. Y por supuesto, no podría dejar de mencionar a mis <strong>tres perritos</strong> 🐶🐶🐶, que son parte fundamental de mi vida. Ellos siempre me alegran el día.</p>
-
-        <h3>¡Hablemos! 💬</h3>
-        <p>Si tienes alguna duda sobre mis proyectos o si te gustaría que colaboráramos en algo, no dudes en contactarme a través de mis redes sociales. ¡Me encantaría conectar contigo! 🌟</p>
-        <div class="redes__botones">
-            <a href="https://www.linkedin.com/in/miguelims" class="redes__enlace">LinkedIn <i class="fa-brands fa-linkedin"></i></a>
-            <a href="https://github.com/MiguelFigueroa02" class="redes__enlace">GitHub <i class="fa-brands fa-github"></i></a>
-        </div>
-    </section>
+    <main class="presentacion">
+        <section class="presentacion__contenido">
+            <h2 class="presentacion__contenido__titulo">Acerca de mí</h2>
+            <p class="presentacion__contenido__texto">Mi nombre es <span>Miguel Figueroa</span> 🧑‍💻. Soy originario de <span>México</span> 🇲🇽 y tengo <span>33 años</span>. Me encanta aprender nuevas tecnologías y compartir mis conocimientos con la comunidad.</p>
+            <p class="presentacion__contenido__texto">Actualmente, soy parte del programa <span>ONE de Alura Latam</span> 🚀, un programa increíble que me ha permitido desarrollar mis habilidades de programación. Estoy muy contento de poder mostrar los resultados de lo que he aprendido y continuar creciendo en el mundo del desarrollo web 🌐.</p>
+            <p class="presentacion__contenido__texto">Fuera de la programación, soy una persona sencilla y me gusta disfrutar de las cosas simples de la vida. Soy fan de los <span>Simpsons</span> 🍩. También me encanta ver <span>fútbol</span> ⚽. Y además, tengo tres perritos🐶🐶🐶, que son parte fundamental de mi vida. Ellos siempre me alegran el día.</p>
+    
+            <h3>¡Hablemos! 💬</h3>
+            <p class="presentacion__contenido__texto">Si tienes alguna duda sobre mis proyectos o si te gustaría que colaboráramos en algo, no dudes en contactarme a través de mis redes sociales. ¡Me encantaría conectar contigo! 🌟</p>
+            <div class="redes__botones">
+                <a href="https://www.linkedin.com/in/miguelims" class="redes__enlace">LinkedIn <i class="fa-brands fa-linkedin"></i></a>
+                <a href="https://github.com/MiguelFigueroa02" class="redes__enlace">GitHub <i class="fa-brands fa-github"></i></a>
+            </div>
+        </section>
+    </main>
+    
 
     <footer>
         <p>¡Gracias por visitar la página de mi proyecto! 👨‍💻</p>
