--- a/dia1.html
+++ b/dia1.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="./day1/script.js"></script>
+    <link rel="stylesheet" href="./day1/style.css">
     <title>Día 1</title>
 </head>
 <body>
