--- a/dia1.html
+++ b/dia1.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script src="./day1/script.js"></script>
     <link rel="stylesheet" href="./day1/style.css">
     <title>Día 1</title>
@@ -10,56 +11,57 @@
 <body>
     <header>
         <nav class="navegacion">
-            <div class="navegacion__enlaces">
-                <a href="./index.html">Inicio</a>
-                <a href="./about.css">Acerca de mí</a>
-            </div>
             <div class="navegacion__logo">
-                <h2 class="navegacion__logo__titulo">Día 1</h2>
+                <h2 class="navegacion__logo__titulo">DÍA 1</h2>
+            </div>
+            <div class="navegacion__enlaces">
+                <a href="./index.html" class="navegacion__enlaces_a">Inicio</a>
+                <a href="./about.html" class="navegacion__enlaces_a">Acerca de mí</a>
             </div>
         </nav>
     </header>
     <main>
         <section class="aplicacion">
-            <p>En JavaScript, los datos tipo <span>string</span> (cadena de texto) se usan para representar palabras o frases, como "Hola" o "123", mientras que los datos tipo <span>number</span> (número) representan valores numéricos, como 123 o 3.14. Cuando comparamos dos valores usando operadores de igualdad, como <code>==</code> (igualdad flexible) o <code>===</code> (igualdad estricta), obtenemos un <strong>booleano</strong>, que solo puede ser <code>true</code> (verdadero) o <code>false</code> (falso). Por ejemplo, <code>"5" == 5</code> da <code>true</code> porque JavaScript convierte automáticamente el string en número, pero <code>"5" === 5</code> da <code>false</code> porque uno es string y el otro número. Así, dependiendo del operador que se use, la comparación puede dar un resultado positivo (<code>true</code>) o negativo (<code>false</code>).</p>
+            <p>En JavaScript, los datos tipo <span>string</span> (cadena de texto) se usan para representar palabras o frases, como "Hola" o "123", mientras que los datos tipo <span>number</span> (número) representan valores numéricos, como 123 o 3.14. Cuando comparamos dos valores usando operadores de igualdad, como <code>==</code> (igualdad flexible) o <code>===</code> (igualdad estricta), obtenemos un <span>booleano</span>, que solo puede ser <code>true</code> (verdadero) o <code>false</code> (falso). Por ejemplo, <code>"5" == 5</code> da <code>true</code> porque JavaScript convierte automáticamente el string en número, pero <code>"5" === 5</code> da <code>false</code> porque uno es string y el otro número. Así, dependiendo del operador que se use, la comparación puede dar un resultado positivo (<code>true</code>) o negativo (<code>false</code>).</p>
     
             <h2>📌 Pasos para ejecutar la aplicación:</h2>
             <ol>
-                <li>1️⃣ <strong>Selecciona el primer valor:</strong> Da clic en un botón para asignar un valor a la <strong>variable uno</strong>.</li>
-                <li>2️⃣  <strong>Selecciona el segundo valor:</strong> Da clic en otro botón para asignar un valor a la <strong>variable dos</strong>.</li>
-                <li>3️⃣ <strong>Ejecuta la comparación:</strong> Presiona el botón <strong>"Intentarlo"</strong> para ver el resultado de la comparación.</li>
+                <li>1️⃣ <span>Selecciona el primer valor:</span> Da clic en un botón para asignar un valor a la <span>variable uno</span>.</li>
+                <li>2️⃣  <span>Selecciona el segundo valor:</span> Da clic en otro botón para asignar un valor a la <span>variable dos</span>.</li>
+                <li>3️⃣ <span>Ejecuta la comparación:</span> Presiona el botón <span>"Intentarlo"</span> para ver el resultado de la comparación.</li>
             </ol>
             
-            <p>🔍 Esto te permitirá entender cómo JavaScript maneja las comparaciones entre <strong>números y cadenas de texto</strong> y cómo los operadores <code>==</code> y <code>===</code> pueden generar diferentes resultados. ¡Pruébalo y experimenta con distintos valores! 🚀</p>
         </section>
         <section class="botones">
-            <div class="section__string">
-                <h2 class="botones__titulo">Variables tipo String</h2>
-                <ul class="strings">
-                    <li class="strings__lista">
-                        <button class="string__lista__boton" onclick="asignarVariable('1');">'1'</button>
-                    </li>
-                    <li class="strings__lista">
-                        <button class="string__lista__boton" onclick="asignarVariable('10');">'10'</button>
-                    </li>
-                    <li class="strings__lista">
-                        <button class="string__lista__boton" onclick="asignarVariable('30');">'30'</button>
-                    </li>
-                </ul>
-            </div>
-            <div class="section__numbers">
-                <h2 class="botones__titulo">Variables tipo Number</h2>
-                <ul class="numbers">
-                    <li class="numbers__lista">
-                        <button class="numbers__lista__boton" onclick="asignarVariable(1);">1</button>
-                    </li>
-                    <li class="numbers__lista">
-                        <button class="numbers__lista__boton" onclick="asignarVariable(10);">10</button>
-                    </li>
-                    <li class="numbers__lista">
-                        <button class="numbers__lista__boton" onclick="asignarVariable(30);">30</button>
-                    </li>
-                </ul>
+            <div class="botones__contenido">
+                <div class="section__string">
+                    <h2 class="botones__titulo">Variables tipo String</h2>
+                    <ul class="strings">
+                        <li class="strings__lista">
+                            <button class="string__lista__boton" onclick="asignarVariable('1');">'1'</button>
+                        </li>
+                        <li class="strings__lista">
+                            <button class="string__lista__boton" onclick="asignarVariable('10');">'10'</button>
+                        </li>
+                        <li class="strings__lista">
+                            <button class="string__lista__boton" onclick="asignarVariable('30');">'30'</button>
+                        </li>
+                    </ul>
+                </div>
+                <div class="section__numbers">
+                    <h2 class="botones__titulo">Variables tipo Number</h2>
+                    <ul class="numbers">
+                        <li class="numbers__lista">
+                            <button class="numbers__lista__boton" onclick="asignarVariable(1);">1</button>
+                        </li>
+                        <li class="numbers__lista">
+                            <button class="numbers__lista__boton" onclick="asignarVariable(10);">10</button>
+                        </li>
+                        <li class="numbers__lista">
+                            <button class="numbers__lista__boton" onclick="asignarVariable(30);">30</button>
+                        </li>
+                    </ul>
+                </div>
             </div>
             <div class="resultados__botones">
                 <p id="botones__var_uno"></p>
@@ -75,7 +77,24 @@
                 <p id="comparar__seccion_resultado"></p>
             </div>
         </section>
-    </main>
+        <section class="aplicacion">
+            <p>¡Pruébalo y experimenta con distintos valores! 🚀</p>
 
+            <p>Consulta la lógica de ejecución en javascript en el siguiente enlace:</p>
+            <div class="repositorio_caja">
+                <a href="https://github.com/MiguelFigueroa02/7DaysOfCode/blob/main/day1/script.js" id="enlace_respositorio">Explora el código en GitHub <i class="fa-solid fa-code"></i></a>
+            </div>
+
+        </section>
+    </main>
+    <footer class="pie">
+        <div class="pie__redes">
+            <p class="pie__redes__description">Te invito a contatar en mis redes: </p>
+            <div class="pies__redes_caja_enlaces">
+                <a href="https://www.linkedin.com/in/miguelims" class="pie__redes__enlace"><i class="fa-brands fa-linkedin-in"></i></a>
+                <a href="https://github.com/MiguelFigueroa02" class="pie__redes__enlace"><i class="fa-brands fa-github"></i></a>
+            </div>
+
+    </footer>
 </body>
 </html>
