Se añade diseño responsivo

--- a/dia2.html
+++ b/dia2.html
@@ -78,7 +78,7 @@
     </main>
     <footer class="pie">
         <div class="pie__redes">
-            <p class="pie__redes__description">Te invito a contatar en mis redes: </p>
+            <p class="pie__redes__description">Te invito a contactar en mis redes: </p>
             <div class="pies__redes_caja_enlaces">
                 <a href="https://www.linkedin.com/in/miguelims" class="pie__redes__enlace"><i class="fa-brands fa-linkedin-in"></i></a>
                 <a href="https://github.com/MiguelFigueroa02" class="pie__redes__enlace"><i class="fa-brands fa-github"></i></a>
